More content and whatever

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.zacharee:colorpicker:9ea5085260'
     implementation 'com.android.tools.build:apksig:3.5.3'
-    implementation 'com.github.zacharee:CollapsiblePreferenceCategory:a8d662ea1c'
-    implementation 'com.github.zacharee:OverlayLib:d7d788c25f'
+    implementation 'com.github.zacharee:CollapsiblePreferenceCategory:4883357a52'
+    implementation 'com.github.zacharee:OverlayLib:52e4a88f56'
+    implementation 'com.github.zacharee:Unblacklister:1.0'
 }
