--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "Integer", "MODULE_VERSION", "1"
     }
 
     buildTypes {
@@ -48,6 +49,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 
     implementation "com.github.topjohnwu.libsu:core:2.5.1"
+    implementation "com.github.topjohnwu.libsu:io:2.5.1"
     implementation 'com.github.zacharee:SeekBarPreference:ddc62c12f2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.zacharee:colorpicker:9ea5085260'
