--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "tk.zwander.oneuituner"
         minSdkVersion 28
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 10
+        versionName versionCode.toString()
 
         buildConfigField "Integer", "MODULE_VERSION", "1"
     }
