--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,10 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.github.zacharee:colorpicker:9ea5085260'
     implementation 'com.android.tools.build:apksig:3.6.4'
     implementation 'com.github.zacharee:CollapsiblePreferenceCategory:4883357a52'
-    implementation 'com.github.zacharee:OverlayLib:c233867bf1'
+    implementation project(':overlaylib')
+//    implementation 'com.github.zacharee:OverlayLib:18280609b7'
     implementation 'com.github.zacharee:Unblacklister:1.1'
 }
